Update Affresco submodule and fix dark mode

--- a/less/dark-mode.less
+++ b/less/dark-mode.less
@@ -16,6 +16,7 @@
   --vetrina-footer-background: #eceae6;
   --vetrina-link-color: #00A1AB;
   --vetrina-text-color: var(--text-color);
+  --vetrina-input-background: #fff;
 }
 
 .dark-variables() {
@@ -36,6 +37,7 @@
   --vetrina-footer-background: #25292b;
   --vetrina-link-color: #00A1AB;
   --vetrina-text-color: var(--text-color);
+  --vetrina-input-background: var(--group-content-bg);
 
   body {
       background-color: black;
